# osiris_science

./: .gitignore  Dockerfile.osiris_science  Dockerfile.stepper_client  Dockerfile.stepper_server  README.md  base_science_make  cameras.py  entrypoint.sh  form.ui  form.ui.autosave  funnel_cake.py  lowering_platform.py  main.py  platform.py  rover_science_make  run_stepper_motor.bash  stepper_motor.py  stepper_motor_controller.py  turret.py  ui_form.py
science_ws/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
science_ws/log/: latest_build
science_ws/src/launch/: nodes_launch.py
science_ws/src/osiris_interfaces/: CMakeLists.txt  package.xml
science_ws/src/osiris_interfaces/srv/: OsirisCollectSample.srv  OsirisFlashlight.srv  OsirisFunnelCake.srv  OsirisUVLight.srv
science_ws/src/osiris_science_nodes/: package.xml  setup.cfg  setup.py
science_ws/src/osiris_science_nodes/osiris_science_nodes/: osiris_brush_node.py  osiris_collect_sample_node.py  osiris_flashlight_node.py  osiris_funnel_cake_node.py  osiris_platform_node.py  osiris_uv_light_node.py  osiris_water_pump_node.py
science_ws/src/push_button/: package.xml  setup.cfg  setup.py
science_ws/src/push_button/push_button/: button_publisher.py
science_ws/src/push_button_interface/: CMakeLists.txt
science_ws/src/push_button_interface/install/: local_setup.sh  setup.ps1  setup.sh
science_ws/src/rpi_srvcli/: package.xml  setup.cfg  setup.py
science_ws/src/science_clients/: package.xml  setup.py
science_ws/src/science_clients/launch/: science_clients.launch.py
science_ws/src/science_clients/science_clients/: brush_client.py  flashlight_client.py  funnel_cake_client.py  stepper_motor_client.py  turret_client.py  water_pump_client.py
science_ws/src/science_interfaces/: CMakeLists.txt  package.xml
science_ws/src/science_nodes/: package.xml  setup.cfg  setup.py
science_ws/src/science_servers/: setup.py
science_ws/src/science_subscribers/: package.xml  setup.cfg  setup.py
science_ws/src/science_subscribers/launch/: science_subscribers.launch.py
science_ws/src/science_subscribers/science_subscribers/: ir_camera_sub.py  microscope_sub.py  uv_camera_sub.py  zed_sub.py
science_ws/src/station_gui_nodes/: package.xml  setup.cfg  setup.py
science_ws/src/station_interfaces/: CMakeLists.txt  package.xml
src/science_clients/: package.xml  setup.cfg  setup.py
src/science_clients/launch/: science_clients.launch.py
src/science_clients/science_clients/: brush_client.py  flashlight_client.py  funnel_cake_client.py  ir_camera_client.py  lowering_platform_client.py  microscope_client.py  stepper_motor_client.py  template_clients.py  uv_camera_client.py  uv_light_client.py  vacuum_client.py  water_pump_client.py
src/science_clients/science_clients/template_clients/: action_client.py  service_client.py
src/science_interfaces/: CMakeLists.txt  package.xml
src/science_interfaces/action/: StepperMotor.action
src/science_interfaces/srv/: FunnelCake.srv  MoveToPosition.srv  StepperMotor.srv  Turret.srv
src/science_servers/: package.xml  setup.cfg  setup.py
src/science_servers/launch/: science_servers.launch.py
src/science_servers/science_servers/: brush_server.py  funnel_cake_server.py  ir_camera_server.py  lowering_platform_server.py  microscope_server.py  server_template.py  template_servers.py  turret_server.py  uv_camera_server.py  uv_light_server.py  vacuum_server.py  water_pump_server.py  zed_server.py
src/science_subscribers/: package.xml  setup.py
src/science_subscribers/launch/: science_subscribers.launch.py
src/science_subscribers/science_subscribers/: ir_camera_sub.py  microscope_sub.py  template_subscribers.py  uv_camera_sub.py  zed_sub.py
(+100 files in other folders)
