<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>science_servers</name>
  <version>1.0.0</version>
  <description>This package contains ROS2 service and action server nodes to execute functionality of lowering platform components in the science package.
  </description>
  <author email="austinlake04@berkeley.edu">Austin Lake</author>
  <maintainer email="austinlake04@berkeley.edu">Austin Lake</maintainer>
  <license>BSD-3-Clause License</license>

  <exec_depend>science_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
