<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>science_clients</name>
  <version>1.0.0</version>
  <description>'This package contains ROS2 clients to issue commands to the science package components'</description>
  <author email="parham2002sh@gmail.com">Parham Sharafoleslami</author>
  <maintainer email="parham2002sh@gmail.com">Parham Sharafoleslami</maintainer>
  <maintainer email="alake4@ivc.edu">Austin Lake</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
