<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>science_subscribers</name>
  <version>1.0.0</version>
  <description>This package contains ROS2 subscribers to receive frames from the science package cameras</description>
  <author email="alake4@ivc.edu">Austin Lake</author>
  <maintainer email="alake4@ivc.edu">Austin Lake</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
